shared/src/test/data/yeast/invalid-json/incomplete-map-2.jyt
BeginDocument       0,  1,  0 ''
BeginMapping        0,  1,  0 '{'
LineBreak           1,  1,  1 '\n'
WhiteSpace          2,  2,  0 '  '
BeginScalar         4,  2,  2 ''
Indicator           4,  2,  2 '\"'
Text                5,  2,  3 'key1'
Indicator           9,  2,  7 '\"'
EndScalar          10,  2,  8 ''
Indicator          10,  2,  8 ':'
WhiteSpace         11,  2,  9 ' '
BeginMapping       12,  2, 10 '{'
LineBreak          13,  2, 11 '\n'
WhiteSpace         14,  3,  0 '    '
BeginScalar        18,  3,  4 ''
Indicator          18,  3,  4 '\"'
Text               19,  3,  5 'key2'
Indicator          23,  3,  9 '\"'
EndScalar          24,  3, 10 ''
Indicator          24,  3, 10 ':'
WhiteSpace         25,  3, 11 ' '
BeginScalar        26,  3, 12 ''
Indicator          26,  3, 12 '\"'
Text               27,  3, 13 'value2'
Indicator          33,  3, 19 '\"'
EndScalar          34,  3, 20 ''
Indicator          34,  3, 20 ','
LineBreak          35,  3, 21 '\n'
LineBreak          36,  4,  0 '\n'
WhiteSpace         37,  5,  0 '  '
BeginScalar        39,  5,  2 ''
Indicator          39,  5,  2 '\"'
Text               40,  5,  3 'key3'
Indicator          44,  5,  7 '\"'
EndScalar          45,  5,  8 ''
WhiteSpace         45,  5,  8 ' '
Indicator          46,  5,  9 ':'
WhiteSpace         47,  5, 10 ' '
BeginMapping       48,  5, 11 '{'
LineBreak          49,  5, 12 '\n'
WhiteSpace         50,  6,  0 '    '
BeginScalar        54,  6,  4 ''
Indicator          54,  6,  4 '\"'
Text               55,  6,  5 'key4'
Indicator          59,  6,  9 '\"'
EndScalar          60,  6, 10 ''
Indicator          60,  6, 10 ':'
WhiteSpace         61,  6, 11 ' '
BeginScalar        62,  6, 12 ''
Indicator          62,  6, 12 '\"'
Text               63,  6, 13 'value4'
Indicator          69,  6, 19 '\"'
EndScalar          70,  6, 20 ''
LineBreak          70,  6, 20 '\n'
WhiteSpace         71,  7,  0 '  '
EndMapping         73,  7,  2 '}'
Indicator          74,  7,  3 ','
LineBreak          75,  7,  4 '\n'
WhiteSpace         76,  8,  0 '  '
BeginScalar        78,  8,  2 ''
Indicator          78,  8,  2 '\"'
Text               79,  8,  3 'key5'
Indicator          83,  8,  7 '\"'
EndScalar          84,  8,  8 ''
Indicator          84,  8,  8 ':'
WhiteSpace         85,  8,  9 ' '
BeginScalar        86,  8, 10 ''
Indicator          86,  8, 10 '\"'
Text               87,  8, 11 'value5'
Indicator          93,  8, 17 '\"'
EndScalar          94,  8, 18 ''
LineBreak          94,  8, 18 '\n'
EndMapping         95,  9,  0 '}'
